# DocChat

./: .gitignore  RESEARCH_AND_PLAN.md  SESSION_NOTES.md
backend/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  cli.py  main.py  pipeline.py
backend/app/api/: __init__.py  app.py  auth.py  deps.py  errors.py  schemas.py
backend/app/api/routes/: auth.py  billing.py  documents.py  health.py  search.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
backend/app/models/: __init__.py  analysis.py  document.py  records.py  user.py
backend/app/services/: __init__.py
backend/app/services/analysis/: __init__.py  keypoints.py  summarize.py  tables.py
backend/app/services/extraction/: __init__.py  base.py  dispatcher.py  docx.py  image.py  libreoffice.py  ocr.py  pdf.py  pptx.py  text.py  xlsx.py
backend/app/services/ingestion/: __init__.py  service.py
backend/app/services/llm/: __init__.py  gemini.py
backend/app/services/nlp/: __init__.py  preprocess.py  segmentation.py
backend/app/services/qa/: __init__.py  engine.py  index.py
backend/app/services/storage/: __init__.py  base.py  document_store.py  r2_file_store.py  sql_store.py  subscription_store.py  user_store.py
backend/tests/: conftest.py  test_analysis.py  test_api.py  test_extraction.py  test_nlp.py  test_phase5_api.py  test_phase5_extractors.py  test_phase5_retrieval.py  test_phase5_store.py  test_qa.py
mobile/: .env.example  .gitignore  README.md  app.json  (+2 more)
(+36 files in other folders)
