[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docchat-backend"
version = "0.1.0"
description = "Classical-NLP document question answering (no LLMs)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pysbd>=0.3.4",
    "snowballstemmer>=2.2",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pytesseract>=0.3.10",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27"]

[project.scripts]
docchat = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
